Shortened code & corrected alignment

--- a/style.css
+++ b/style.css
@@ -144,8 +144,8 @@ form{
 }
 
 .right-1{
-    width: 300px;
-    height: 100PX;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -165,7 +165,7 @@ form{
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 10px 0 0 10px;
 }
 
 .wind-speed{
@@ -178,18 +178,16 @@ form{
 
 .right-3{
     background-color: rgba(0, 0, 0, 0.3);
-    width: 300px;
-    height: 100PX;
+    width: 100%;
+ 
     border-radius: 20px;
     padding: 10px;
     color: white;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .right-2{
-   
-    width: 300px;
-    height: 100PX;
-   
+    width: 100%;
+    height: 100%;
 }
 
 .right-1 h2,.right-2 h2,.right-3 h2{
@@ -418,10 +416,6 @@ form{
     }
 
     .other-details{
-        width: 100%;
-    }
-
-    .right-1, .right-2, .right-3{
         width: 100%;
     }
 
